--- a/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
+++ b/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
@@ -1,24 +1,19 @@
-﻿<md-dialog layout="column">
-    <md-toolbar layout-align="center center">
+﻿<md-dialog layout="column" style="max-width:50%;max-height:50%;">
+    <md-toolbar flex="noshrink" layout-align="center center">
         <h1 class="md-title">Player Character List</h1>
     </md-toolbar>
     <md-dialog-content class="md-padding" layout="row">
-        <div flex>
-            <img ng-src="{{currentPortrait}}" />
+        <div flex="33" class="md-padding" layout="column" layout-align="center center">
+            <img ng-src="http://nwn.sinfar.net/{{currentChar.portrait}}" />
+            <md-button class="md-raised md-primary" ng-click="dlport()">Download Portrait</md-button>
         </div>
-        <div flex layout="column">
-            <div flex>
-                <ul ng-repeat="char in charList">
-                    <li>
-                        {{char.pcid}} - {{char.name}}
-                    </li>
-                </ul>
+        <div flex="66" layout="column">
+            <div flex="33" style="overflow-y:auto;">
+                <div ng-repeat="char in charList" style="cursor:pointer;padding-bottom:5px;" ng-click="charSelect($index)">
+                    {{char.pcName}}
+                </div>
             </div>
-            <div flex layout="column">
-                bio section
-                <md-button ng-click="btn()">
-                    Click
-                </md-button>
+            <div ng-if="currentBio" flex="66" style="overflow-y:auto;background-color:hsla(0, 0%, 0%, 0.7);border-radius:15px;" class="md-padding" ng-bind-html="currentBio">
             </div>
         </div>
     </md-dialog-content>
