--- a/SinfarWebClient/SinfarWebClient/www/assets/css/updatedWebclient.css
+++ b/SinfarWebClient/SinfarWebClient/www/assets/css/updatedWebclient.css
@@ -104,3 +104,6 @@ md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
     color: white !important;
     background-color:white !important;
 }
+md-tooltip{
+    color:black;
+}
