Char list grouping by vault id.

--- a/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
+++ b/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
@@ -5,12 +5,15 @@
     <md-dialog-content class="md-padding" layout="row">
         <div flex="33" class="md-padding" layout="column" layout-align="center center">
             <img ng-src="http://nwn.sinfar.net/{{currentChar.portrait}}" />
-            <md-button class="md-raised md-primary" ng-click="dlport()">Download Portrait</md-button>
+            <md-button class="md-raised md-primary" ng-click="dlport()">Download</md-button>
         </div>
         <div flex="66" layout="column">
             <div flex="33" style="overflow-y:auto;">
-                <div ng-repeat="char in charList" style="cursor:pointer;padding-bottom:5px;" ng-click="charSelect($index)">
-                    {{char.pcName}}
+                <div ng-repeat="charServer in serverList | filter:{devMasterServer:true}" ng-show="serverCharFilter.length">
+                    <u>{{charServer.name}} Characters</u>
+                    <div ng-repeat="char in serverCharFilter = (charList | filter:{vaultId:charServer.vaultId})" style="cursor:pointer;padding-bottom:5px;padding-left:10px;" ng-click="charSelect(char.pcId)">
+                        {{char.pcName}}
+                    </div>
                 </div>
             </div>
             <div ng-if="currentBio" flex="66" style="overflow-y:auto;background-color:hsla(0, 0%, 0%, 0.7);border-radius:15px;" class="md-padding" ng-bind-html="currentBio">
