--- a/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
+++ b/SinfarWebClient/SinfarWebClient/www/partials/moreInfo.html
@@ -5,7 +5,7 @@
     <md-dialog-content class="md-padding" layout="row">
         <div flex="33" class="md-padding" layout="column" layout-align="center center">
             <img ng-src="http://nwn.sinfar.net/{{currentChar.portrait}}" />
-            <md-button class="md-raised md-primary" ng-click="dlport()">Download</md-button>
+            <md-button ng-show="currentChar.dlOption" class="md-raised md-primary" ng-click="dlport()">Download</md-button>
         </div>
         <div flex="66" layout="column">
             <div flex="33" style="overflow-y:auto;">
